  not update the sample in the instrument editor, which in turn made the wave loader function to
  load over an incorrect position.
! Loading songs with VST plugins didn't restore the name of them (was set back to default one). Fixed
+ Added functioning Track record arm buttons- new graphics required (pooplog)
+ Added midi velocity, modwheel, pitchbend, etc mapping to twks/cmds (pooplog)
+ Added new button in sequencer, changed insert button to behave as an insert button should (pooplog)
! Changed double click on pattern to open that pattern in patternview for edit (pooplog)
! Fixed noteoff recording to work correctly, moved toggle to seq menu with other commonly accessed toggles (pooplog)
* Fixed minusminus button to decrease to 0 (pooplog)
! undo/redo for pattern and sequence editing!!! (pooplog)
! slight reordering of interface due to user request for more intuitive use (pooplog)

V1.66
-----
+ Added elapsed playtime (by KooPer)
+ Now loading songs with machines outside of the screen moves them to a visible area.
+ VST host correctly does "idle" calls to VST's now. This supposedly makes AbSynth work.
+ VST host now replies to "GetParameterQuantization". Some plugins use this to round correctly.
+ Added Patch to make VSTi sc-101 from SC developers work. (Not an awesome plugin anyway, and crashes)
+ New machine graphics thanks to /\/\ark.
+ Added four colour themes selectable via a comboox in configuration-settings, "visual" folder.
* Important change in the Song Loading routine to load better the VST Plugins.
  Also, now saves the program number, so VST's like "Triangle II", "Vivaldi" and "Ganymed" work!
  New Files wont load VST's in previous versions of Psycle. It's sort of a security for newer files.
* Changed the sequencer a bit:
  Now only shows the patterns within the sequence length. (Following a request made some time ago)
  Added "add 10" and "dec 10" to pattern position (This will make some happy too)