@@ -8,13 +8,14 @@ V1.67
   load over an incorrect position.
 ! Loading songs with VST plugins didn't restore the name of them (was set back to default one). Fixed
 + Added functioning Track record arm buttons- new graphics required (pooplog)
-+ Added midi velocity, modwheel, pitchbend, etc mapping to twks/cmds (pooplog)
++ Added midi velocity, modwheel, pitchbend, etc mapping to twks/cmds!! (pooplog)
 + Added new button in sequencer, changed insert button to behave as an insert button should (pooplog)
 ! Changed double click on pattern to open that pattern in patternview for edit (pooplog)
 ! Fixed noteoff recording to work correctly, moved toggle to seq menu with other commonly accessed toggles (pooplog)
 * Fixed minusminus button to decrease to 0 (pooplog)
-! undo/redo for pattern and sequence editing!!! (pooplog)
+! UNDO/REDO for pattern and sequence editing!!! (pooplog)
 ! slight reordering of interface due to user request for more intuitive use (pooplog)
+! Native Plugin realtime mouse tweak recording!!! (pooplog)
 
 V1.66
 -----
